# soccer_interfaces

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
.github/workflows/: build_and_test_foxy.yaml  build_and_test_galactic.yaml  build_and_test_rolling.yaml
soccer_2d_vision_msgs/: CMakeLists.txt  README.md  package.xml
soccer_2d_vision_msgs/msg/: Ball.msg  BallArray.msg  FieldBoundary.msg  Goalpost.msg  GoalpostArray.msg  MarkingArray.msg  MarkingEllipse.msg  MarkingIntersection.msg  ObstacleArray.msg  Robot.msg  RobotArray.msg
soccer_3d_vision_msgs/: CMakeLists.txt  README.md  package.xml
soccer_3d_vision_msgs/msg/: Ball.msg  BallArray.msg  FieldBoundary.msg  Goalpost.msg  GoalpostArray.msg  MarkingArray.msg  MarkingEllipse.msg  MarkingIntersection.msg  MarkingSegment.msg  Obstacle.msg  ObstacleArray.msg  RobotArray.msg
soccer_geometry_msgs/: package.xml
soccer_interfaces/: CHANGELOG.rst  package.xml
soccer_model_msgs/: CMakeLists.txt  package.xml
soccer_model_msgs/msg/: Ball.msg  BallArray.msg  Obstacle.msg  Robot.msg  Whistle.msg
soccer_motion_msgs/: CMakeLists.txt  package.xml
soccer_motion_msgs/msg/: Dead.msg  Getup.msg  Kick.msg
soccer_vision_2d_msgs/: CHANGELOG.rst  README.md  package.xml
soccer_vision_2d_msgs/msg/: FieldBoundary.msg  MarkingEllipse.msg  MarkingIntersection.msg  MarkingSegment.msg
soccer_vision_3d_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
soccer_vision_3d_msgs/msg/: BallArray.msg  FieldBoundary.msg
soccer_vision_3d_msgs/scripts/: visualizer.py
soccer_vision_attribute_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
soccer_vision_attribute_msgs/msg/: Confidence.msg  Goalpost.msg  Robot.msg
soccer_vision_msgs/: CMakeLists.txt  README.md  package.xml
soccer_vision_msgs/msg/: Ball.msg  BallArray.msg  Balls.msg  FieldBoundary.msg  Goalpost.msg  GoalpostArray.msg  MarkingArray.msg  MarkingEllipse.msg  MarkingIntersection.msg  MarkingSegment.msg  Obstacle.msg  Robot.msg
